# artenv

./: .gitignore  LICENSE  README.md
completions/: _artenv  artenv.bash
libexec/: artenv  artenv---version  artenv-commands  artenv-default  artenv-doctor  artenv-global  artenv-help  artenv-info  artenv-init  artenv-install  artenv-ls  artenv-make  artenv-migrate  artenv-new  artenv-register-env  artenv-register-version  artenv-sh-shell  artenv-version  artenv-versions  artlogin.sh  util.sh
templates/standard/: .gitignore  CMakeLists.txt  README.md  artemislogon.C  make.sh  mapper.conf  setbldprm.sh
templates/standard/conf/map/mwdc/: dc1_demo.map  dc2_demo.map
templates/standard/conf/map/pla/: pla_demo.map
templates/standard/conf/map/trig/: trig_demo.map
templates/standard/conf/seg/: modulelist.yaml  seglist.yaml
templates/standard/hist/pla/: pla.tmpl.hist.yaml  pla_demo.hist.yaml
templates/standard/prm/mwdc/dc1_demo/: geometry.yaml
templates/standard/prm/mwdc/dc2_demo/: config.yaml  geometry.yaml
templates/standard/src/: CMakeLists.txt  TModuleDecoderFIT.cc  TModuleDecoderFIT.h  TModuleDecoderMIRAFADC.cc  TModuleDecoderMIRAFADC.h  TModuleDecoderMIRAQDC.cc  TModuleDecoderMIRAQDC.h  TModuleDecoderRICHADCM.cc  TModuleDecoderRICHADCM.h  TModuleDecoderV1730ZLE.cc  TModuleDecoderV1730ZLE.h  TV1730ZLEDataObject.cc  TV1730ZLEDataObject.h  TV1730ZLEWaveformData.cc  TV1730ZLEWaveformData.h  linkdef_user.h
templates/standard/steering/: chk_demo.yaml  tref_demo.yaml
templates/standard/steering/bld/mwdc/: mwdc_demo.yaml  time2dt.inc.yaml
templates/standard/steering/bld/mwdc/type/: xxyy.inc.yaml  xxyy_calib.inc.yaml  xxyy_xxyy.inc.yaml
templates/standard/steering/bld/pla/: pla.tmpl.yaml  pla_demo.yaml
